# social-sim-open-sae

./: .env.example  .gitattributes  .gitignore  CITATION.cff  DATA_MANIFEST.tsv  LICENSE  README.md  pyproject.toml  requirements.txt
SAE/: .gitignore  CITATION.cff  DATA_MANIFEST.tsv  README.md  pyproject.toml  requirements.txt
SAE/docs/: BUILD_A_GAME.md  GPU_REGENERATION_ROADMAP.md  LABELS.md  OPEN_SAE_PARAGRAPH_ACTIVATIONS.md  REPRODUCTION.md  STEERING.md
SAE/examples/: __init__.py
SAE/reports/: FEATURE_DESCRIPTION_SUMMARY.md  PAPER_ACTIVATION_GIT_HISTORY_AUDIT.md  PAPER_ACTIVATION_INDEX_SEARCH_AUDIT.md  PAPER_ACTIVATION_LABEL_CROSSWALK.md  PAPER_ACTIVATION_NEURONPEDIA_APPROX_MATCHES.md  RELEASE_COMPLETION_AUDIT.json  RELEASE_COMPLETION_AUDIT.md
SAE/runpod/: RUNPOD_H100.md  RUN_GAME_STEERING_ON_RUNPOD.md  run_creativity_open_sae_steering.sh  run_game_open_sae_dose_sweep.sh  run_game_open_sae_steering.sh  run_remaining_games_open_sae.sh  run_safe_risky_five_condition_open_sae.sh
SAE/scripts/: analyze_open_sae_ablation.py  audit_paper_activation_git_history.py  audit_paper_activation_index_sources.py  build_approximate_neuronpedia_label_matches.py  build_data_manifest.py  build_feature_description_bundle.py  build_paper_activation_label_crosswalk.py  build_release_completion_audit.py  build_release_zip.py  run_edsl_social_simulation.py  run_open_sae_dose_sweep.py  run_open_sae_feature_inspection.py  run_open_sae_steering_generation.py  verify_live_dose_sweep_outputs.py  verify_live_steering_outputs.py
SAE/social_sim_open_sae/: __init__.py  edsl_adapter.py  (+1 more)
(+958 files in other folders)
