[project]
name = "social-sim-open-sae"
version = "0.1.0"
description = "Build EDSL social simulations and inspect them with Goodfire Open-SAE features."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "requests>=2.31",
  "edsl>=1.0.5",
  "transformers>=4.51,<5",
  "accelerate>=0.31",
  "bitsandbytes>=0.43",
  "safetensors>=0.4",
  "sentencepiece>=0.2",
  "protobuf>=4.25",
  "huggingface_hub>=0.30,<1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
